methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: '=' expected but ';' found.
def haveBaggle():Boolean = {
^