methods.returning.MethodsReturning.scala.code
var x
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (a <- 1 to 6){
    avance()
    if (estSurBiscuit==true){
      vuBiscuit=true
    }
  }
  for ( b <- 1 to 6){
    recule()
  }
  if (estSurBiscuit==true){
      vuBiscuit=tr
  }
  return vuBiscuit
}

x=haveBaggle()